Attempt to fix wrapping on relay summary on ios

--- a/src/app.css
+++ b/src/app.css
@@ -235,6 +235,7 @@
 
   :root {
     font-family: Lato;
+    text-size-adjust: 100%;
     --sait: var(--safe-area-inset-top, env(safe-area-inset-top));
     --saib: var(--safe-area-inset-bottom, env(safe-area-inset-bottom));
     --sail: var(--safe-area-inset-left, env(safe-area-inset-left));
